<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Morphological Analysis Tutorial</string>
    <string name="action_settings">Settings</string>
    <string name="language_en">English</string>
    <string name="language_zh_TW">繁體中文</string>
    <string name="language_zh_CN">简体中文</string>
    <string name="start">Start!</string>
    <string name="next">Next -&gt;</string>
    <string name="result">Result:</string>
    <string name="restart">Restart</string>
    <string name="title_activity_explanation">Explanation</string>
    <string name="title_activity_step1">Step1</string>
    <string name="title_activity_step2">Step2</string>
    <string name="title_activity_step3">Step3</string>
    <string name="title_activity_edit_sub_var">Edit variables</string>
    <string name="title_activity_step4">Step4</string>
    <string name="title_activity_step5">Step5</string>
    <string name="explanation">Morphological Analysis or General Morphological Analysis is a method developed by Fritz Zwicky (1967, 1969) for exploring all the possible solutions to a multi-dimensional, non-quantified complex problem.</string>
    <string name="start_explain">This is a morphological analysis(MA)tutorial.</string>
    <string name="explanation_step1">List the question, and make explanations.</string>
    <string name="explanation_step2">Break the questioin into part units. Each unit has its properties.</string>
    <string name="explanation_step3">Construct the matrix which contains all the units. In this matrix, it should contains all possible answers.</string>
    <string name="explanation_step4">Check if all the solutions are reasonable, and make analyses.</string>
    <string name="explanation_step5">Compare all the solutions, and select the best one.</string>
    <string name="question">Q.</string>
    <string name="answer">A.</string><string name="hint_step1">Enter a question</string>
    <string name="hint_step2">Main varialbe</string>
    <string name="hint_sub_var">Dependent variables</string>
    <string name="add_step2">Add</string>
    <string name="done">Done</string>
    <string name="title_activity_result">Result</string>
    
    
    

</resources>
